--- a/force-app/main/default/classes/ASF_Case360Controller.cls
+++ b/force-app/main/default/classes/ASF_Case360Controller.cls
@@ -1,5 +1,23 @@
+/**
+ * @description       : 
+ * @author            : rsinghnagar@salesforce.com
+ * @group             : 
+ * @last modified on  : 06-30-2024
+ * @last modified by  : rsinghnagar@salesforce.com 
+ * Modifications Log
+ * Ver   Date         Author                       Modification
+ * 1.0   06-30-2024   rsinghnagar@salesforce.com   Initial Version
+**/
 @SuppressWarnings('PMD.ClassNamingConventions,PMD.FormalParameterNamingConventions, PMD.ApexSOQLInjection')
 public with sharing class ASF_Case360Controller {
+    @AuraEnabled
+    public static String dummyMethodForJSVal(String caseId){
+        System.debug('caseId'+caseId);
+        if(caseId == null){
+            return String.valueOf(1/0);
+        }
+        return 'Success';
+    }
     @AuraEnabled(cacheable=true)
     public static UserAndCaseWrapper fetchUserAndCaseDetails(Id caseId){
         UserAndCaseWrapper wrap = new UserAndCaseWrapper();
