--- a/force-app/main/default/classes/ABCL_CommonCLass.cls
+++ b/force-app/main/default/classes/ABCL_CommonCLass.cls
@@ -68,9 +68,6 @@ public with sharing class ABCL_CommonCLass {
                 else if(bussHrName.containsIgnoreCase('ABSLIG')) {
                     mapOf_BusinessUnit_To_BusinessHr.put('ABSLIG', bh);
                 }
-                else if(bussHrName.containsIgnoreCase('ABSLI')) {
-                    mapOf_BusinessUnit_To_BusinessHr.put('ABSLI', bh);
-                }
             }
         
             for(Case csRec : newCaseLst) {  
@@ -114,6 +111,7 @@ public with sharing class ABCL_CommonCLass {
                     recordsToUpdate.add(detRec);
                 }
             }
+            recordsToUpdate.addAll(recordmap.values());
         }
         
         if(!recordsToUpdate.isEmpty()){
@@ -169,7 +167,7 @@ public with sharing class ABCL_CommonCLass {
     public String calculateSlaOverwriteIdentifier(Integer calculateMinutes) {
         
         String slaOverwriteIdentifier = '';
-        if(calculateMinutes > 0 && calculateMinutes <= 900) {
+        if(calculateMinutes <= 900) {
             slaOverwriteIdentifier = '1';
         }
         else if(calculateMinutes > 900 && calculateMinutes <= 960) {
@@ -192,6 +190,9 @@ public with sharing class ABCL_CommonCLass {
         }
         else if(calculateMinutes > 1260 && calculateMinutes <= 1320) {
             slaOverwriteIdentifier = '8';
+        }
+        else if(calculateMinutes > 1320 && calculateMinutes <= 1440) {
+            slaOverwriteIdentifier = '1';
         }
         return slaOverwriteIdentifier;
     }
